2009-11-25  Kaz Kylheku  <kkylheku@gmail.com>

	* parser.y (grammar): Fixes for bison 2.4.1. Remove superfluous action
	in chrlit.  Include <stdlib.h> for abort.

2009-11-25  Kaz Kylheku  <kkylheku@gmail.com>

	Refinements to Valgrind support.

	* gc.c (mark_mem_region): If a pointer from the stack is valid
	for the heap, it may point to a free object, which is marked
	in accessible. We must grant the garbage collector access
	to the object. If the object is free, close off access.
	This is not 100% correct, because if the object is accessible
	but undefined, then we end up flipping it to defined.
	(sweep): Before sweeping each heap, mark the entire block as defined.
	This is necessary because sweep accesses blocks, which may be free,
	and thus inaccessible. Then, during the sweep, any block
	which is already free must be marked inaccessible again.
	This means that the remaining blocks that are reachable become defined.
	Here that is okay, because gc has marked all those blocks. If any
	of them had uninitialized members, that would have been caught
	by valgrind during the marking phase, if not sooner.

2009-11-25  Kaz Kylheku  <kkylheku@gmail.com>

	More Valgrind support. New option --vg-debug which turns on
	Valgrind protection of free blocks. This works independently
	of --gc-debug.

	* gc.c (opt_vg_debug): New conditionally defined global variable.
	(more): Mark entire heap of free blocks inaccessible, if
	vg debugging is enabled.
	(make_obj): If vg debugging enabled, mark returned block as accessible,
	but undefined, and take care to grant self temporary access while
	manipulating the free list.
	(finalize): Removed old debugging logic of not freeing strings
	and vectors during gc debug. If the null pointers are ever a problem
	during debugging, they can be checked inside obj_print, and
	turned into #<garbage ...> notation.
	(sweep): Switch to FIFO free block recycling if vg debugging is
	enabled, just like when gc debugging is enabled.