@@ -1,5 +1,10 @@
 2009-11-25  Kaz Kylheku  <kkylheku@gmail.com>
 
+	* gc.c (mark_mem_region): Bugfix: do not mess with the valgrind
+	accessibility of the heap object if valgrind debugging is not enabled.
+
+2009-11-25  Kaz Kylheku  <kkylheku@gmail.com>
+
 	* parser.y (grammar): Fixes for bison 2.4.1. Remove superfluous action
 	in chrlit.  Include <stdlib.h> for abort.
 
